--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
       - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_DATASOURCE_PASSWORD=41Zuteho!
       - SPRING_JPA_HIBERNATE_DDL_AUTO=create
       - spring.datasource.driver-class-name=org.postgresql.Driver
       - spring.jpa.database=postgresql
@@ -27,7 +27,7 @@ services:
             - sample_db:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=41Zuteho!
       - POSTGRES_DB=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata
     ports:
